--- a/evaluation/bls-tutorial_uli.ipynb
+++ b/evaluation/bls-tutorial_uli.ipynb
@@ -48,8 +48,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-22T13:19:28.772081Z",
-     "start_time": "2025-06-22T13:19:28.525399Z"
+     "end_time": "2025-06-25T12:18:20.697920Z",
+     "start_time": "2025-06-25T12:18:20.417940Z"
     }
    },
    "source": [
@@ -103,8 +103,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-22T13:40:22.434230Z",
-     "start_time": "2025-06-22T13:40:22.432140Z"
+     "end_time": "2025-06-25T12:18:22.958221Z",
+     "start_time": "2025-06-25T12:18:22.955928Z"
     }
    },
    "source": [
@@ -126,8 +126,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-22T13:40:25.870074Z",
-     "start_time": "2025-06-22T13:40:24.215344Z"
+     "end_time": "2025-06-25T12:18:24.735977Z",
+     "start_time": "2025-06-25T12:18:24.126294Z"
     }
    },
    "source": [
@@ -193,8 +193,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-22T13:52:22.728113Z",
-     "start_time": "2025-06-22T13:52:22.725108Z"
+     "end_time": "2025-06-25T12:18:29.182853Z",
+     "start_time": "2025-06-25T12:18:29.179334Z"
     }
    },
    "source": [
@@ -209,18 +209,18 @@
        "       11.33333333, 13.5       , 15.66666667, 17.83333333, 20.        ])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 12
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-22T13:52:34.883535Z",
-     "start_time": "2025-06-22T13:52:34.880599Z"
+     "end_time": "2025-06-25T12:18:30.478672Z",
+     "start_time": "2025-06-25T12:18:30.475090Z"
     }
    },
    "cell_type": "code",
@@ -236,18 +236,18 @@
        "       0.13333333, 0.15      , 0.16666667, 0.18333333, 0.2       ])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-22T14:04:21.210511Z",
-     "start_time": "2025-06-22T14:04:20.777193Z"
+     "end_time": "2025-06-25T12:18:32.421183Z",
+     "start_time": "2025-06-25T12:18:32.038066Z"
     }
    },
    "cell_type": "code",
@@ -260,30 +260,32 @@
     {
      "data": {
       "text/plain": [
-       "          depth: array([ 0.59054995,  0.58444517,  0.59077123, ..., 22.21244352,\n",
-       "       20.99349906, 25.05580351])\n",
-       "      depth_err: array([0.2780418 , 0.27804293, 0.27804208, ..., 2.22011306, 2.21677681,\n",
-       "       2.20676349])\n",
-       "      depth_snr: array([ 2.123961  ,  2.10199616,  2.12475478, ..., 10.00509563,\n",
-       "        9.47028091, 11.35409553])\n",
-       "       duration: array([0.2 , 0.2 , 0.2 , ..., 0.05, 0.05, 0.05])\n",
-       " log_likelihood: array([ 4.55370314,  4.46191539,  4.55759159, ..., 50.24876206,\n",
-       "       45.02086054, 64.71558453])\n",
+       "          depth: array([ 1.12402405,  5.34751259,  9.43532373, 23.8069447 , 15.59960458,\n",
+       "       22.54384909, 22.99932651, 30.89330976, 37.06788835, 37.06788835])\n",
+       "      depth_err: array([0.31454638, 1.00273019, 1.13167355, 2.20687497, 1.8354298 ,\n",
+       "       2.20789002, 2.22377021, 2.2068557 , 3.11461793, 3.11461793])\n",
+       "      depth_snr: array([ 3.57347636,  5.33295264,  8.33749604, 10.7876273 ,  8.49915623,\n",
+       "       10.21058516, 10.34249243, 13.99879014, 11.90126339, 11.90126339])\n",
+       "       duration: array([0.135, 0.05 , 0.065, 0.05 , 0.05 , 0.05 , 0.05 , 0.05 , 0.05 ,\n",
+       "       0.05 ])\n",
+       " log_likelihood: array([ 8.70072579, 14.50454436, 35.29784263, 58.41918336, 36.32742989,\n",
+       "       52.33633118, 53.69423253, 98.37497855, 70.96168123, 70.96168123])\n",
        "      objective: 'likelihood'\n",
-       "         period: array([ 0.4       ,  0.40005327,  0.40010656, ..., 13.55098846,\n",
-       "       13.61239642, 13.67436346])\n",
-       "          power: array([ 4.55370314,  4.46191539,  4.55759159, ..., 50.24876206,\n",
-       "       45.02086054, 64.71558453])\n",
-       "   transit_time: array([1354.25882313, 1354.25382313, 1354.25382313, ..., 1364.79382313,\n",
-       "       1364.73382313, 1360.98382313])"
+       "         period: array([ 0.5       ,  2.66666667,  4.83333333,  7.        ,  9.16666667,\n",
+       "       11.33333333, 13.5       , 15.66666667, 17.83333333, 20.        ])\n",
+       "          power: array([ 8.70072579, 14.50454436, 35.29784263, 58.41918336, 36.32742989,\n",
+       "       52.33633118, 53.69423253, 98.37497855, 70.96168123, 70.96168123])\n",
+       "   transit_time: array([1354.18632313, 1355.57882313, 1355.30132313, 1360.65882313,\n",
+       "       1356.32382313, 1359.89382313, 1364.84382313, 1355.29382313,\n",
+       "       1370.96382313, 1370.96382313])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 28
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -296,8 +298,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-22T14:04:32.439785Z",
-     "start_time": "2025-06-22T14:04:32.436240Z"
+     "end_time": "2025-06-25T12:18:37.080848Z",
+     "start_time": "2025-06-25T12:18:37.076784Z"
     }
    },
    "source": [
@@ -320,12 +322,12 @@
        "       13.61239642, 13.67436346])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 29
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -338,15 +340,15 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-22T14:04:35.935313Z",
-     "start_time": "2025-06-22T14:04:35.507935Z"
+     "end_time": "2025-06-25T12:18:41.379589Z",
+     "start_time": "2025-06-25T12:18:40.930943Z"
     }
    },
    "source": [
     "results = bls.autopower(durations, frequency_factor=5.0)"
    ],
    "outputs": [],
-   "execution_count": 30
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -359,8 +361,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-22T14:04:53.189734Z",
-     "start_time": "2025-06-22T14:04:53.186489Z"
+     "end_time": "2025-06-25T12:18:42.040132Z",
+     "start_time": "2025-06-25T12:18:42.036896Z"
     }
    },
    "source": [
@@ -381,12 +383,12 @@
        " 'log_likelihood']"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 31
+   "execution_count": 9
   },
   {
    "cell_type": "markdown",
@@ -399,8 +401,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-22T14:04:57.886567Z",
-     "start_time": "2025-06-22T14:04:57.883243Z"
+     "end_time": "2025-06-25T12:18:46.662123Z",
+     "start_time": "2025-06-25T12:18:46.658920Z"
     }
    },
    "source": [
@@ -430,7 +432,7 @@
      ]
     }
    ],
-   "execution_count": 32
+   "execution_count": 10
   },
   {
    "cell_type": "markdown",
@@ -444,8 +446,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-22T14:05:13.770714Z",
-     "start_time": "2025-06-22T14:05:13.692381Z"
+     "end_time": "2025-06-25T12:18:48.528424Z",
+     "start_time": "2025-06-25T12:18:48.430539Z"
     }
    },
    "source": [
@@ -478,7 +480,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 33
+   "execution_count": 11
   },
   {
    "cell_type": "markdown",
