--- a/evaluation/bls_TOI4504_d.ipynb
+++ b/evaluation/bls_TOI4504_d.ipynb
@@ -467,7 +467,10 @@
     }
    },
    "cell_type": "code",
-   "source": "plot_this(df.time, [df.flux], [\"flux\"], title=\"Zoom\", left=2459960, right=2460000)",
+   "source": [
+    "plot_this(df.time, [df.flux], [\"flux\"], title=\"Zoom\", left=2459960, right=2460000)\n",
+    "Next: bls tutorial : wie komme ich an die TT-Zahlenwerte aus diesem Plot?"
+   ],
    "id": "5d7ac76ae59fabd0",
    "outputs": [
     {
