--- a/evaluation/bls/bls_TOI4504_sec27-69.ipynb
+++ b/evaluation/bls/bls_TOI4504_sec27-69.ipynb
@@ -23,7 +23,7 @@
     "import astropy\n",
     "from astropy.timeseries import BoxLeastSquares\n",
     "from matplotlib import rcParams\n",
-    "path = '../research/star_systems/TOI-4504/lightkurve/'  # path to lightcurve data\n"
+    "path = '../../research/star_systems/TOI-4504/lightkurve/'  # path to lightcurve data\n"
    ],
    "id": "62b2c38295cdef15",
    "outputs": [],
