--- a/process_TESS_data/process_flux_data_demo.ipynb
+++ b/process_TESS_data/process_flux_data_demo.ipynb
@@ -15,15 +15,16 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-06-23T13:00:57.449244Z",
-     "start_time": "2025-06-23T13:00:55.532757Z"
+     "end_time": "2025-07-02T16:24:20.830774Z",
+     "start_time": "2025-07-02T16:24:18.282666Z"
     }
    },
    "source": [
     "# we want to see plots right here in the notebook\n",
     "%matplotlib inline\n",
-    "from process_TESS_data.process_flux_data import *  # process_flux_data.py must be in the same directory as this notebook\n",
-    "# import lightkurve as lk   # uncomment if you want to use lightkurve methods in this notebook\n",
+    "import sys\n",
+    "sys.path.append('../src/curvesimulator/')\n",
+    "from cs_flux_data import *\n",
     "path = '../research/star_systems/TOI-4504/lightkurve/'  # path to example lightcurve data. Change this if required.\n"
    ],
    "outputs": [],
