--- a/process_TESS_data/process_flux_data_example.ipynb
+++ b/process_TESS_data/process_flux_data_example.ipynb
@@ -12,15 +12,15 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-06-23T13:01:18.751569Z",
-     "start_time": "2025-06-23T13:01:16.873824Z"
+     "end_time": "2025-07-02T16:24:36.668778Z",
+     "start_time": "2025-07-02T16:24:34.137111Z"
     }
    },
    "source": [
     "%matplotlib inline\n",
-    "from process_TESS_data.process_flux_data import *\n",
-    "# import lightkurve as lk\n",
-    "# import pandas as pd\n",
+    "import sys\n",
+    "sys.path.append('../src/curvesimulator/')\n",
+    "from cs_flux_data import *\n",
     "path = '../research/star_systems/TOI-4504/lightkurve/'\n"
    ],
    "outputs": [],
