--- a/process_TESS_data/process_sector_002.ipynb
+++ b/process_TESS_data/process_sector_002.ipynb
@@ -18,8 +18,10 @@
    },
    "source": [
     "%matplotlib inline\n",
-    "from process_TESS_data.process_flux_data import *\n",
-    "path = '../research/star_systems/TOI-4504/lightkurve/'\n"
+    "import sys\n",
+    "sys.path.append('../src/curvesimulator/')\n",
+    "from cs_flux_data import *\n",
+    "path = '../research/star_systems/TOI-4504/lightkurve/'"
    ],
    "outputs": [],
    "execution_count": 1
