--- a/evaluation/bls/bls_TOI4504_d.ipynb
+++ b/evaluation/bls/bls_TOI4504_d.ipynb
@@ -10,24 +10,23 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-06-29T10:24:34.294704Z",
-     "start_time": "2025-06-29T10:24:27.230069Z"
+     "end_time": "2025-07-02T16:35:24.084049Z",
+     "start_time": "2025-07-02T16:35:22.131479Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# we want to see plots right here in the notebook\n",
     "%matplotlib inline\n",
-    "from process_TESS_data.process_flux_data import *  # process_flux_data.py must be in the same directory as this notebook\n",
-    "# import lightkurve as lk   # uncomment if you want to use lightkurve methods in this notebook\n",
-    "# import astropy\n",
+    "import sys\n",
+    "sys.path.append('../../src/curvesimulator/')\n",
+    "from cs_flux_data import *\n",
     "from astropy.timeseries import BoxLeastSquares\n",
-    "# from matplotlib import rcParams\n",
     "path = '../../research/star_systems/TOI-4504/lightkurve/'  # path to lightcurve data\n"
    ],
    "id": "62b2c38295cdef15",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 4
   },
   {
    "metadata": {
