--- a/evaluation/bls/bls_TOI4504_sec01-90.ipynb
+++ b/evaluation/bls/bls_TOI4504_sec01-90.ipynb
@@ -18,11 +18,11 @@
    "source": [
     "# we want to see plots right here in the notebook\n",
     "%matplotlib inline\n",
-    "from process_TESS_data.process_flux_data import *  # process_flux_data.py must be in the same directory as this notebook\n",
-    "# import lightkurve as lk   # uncomment if you want to use lightkurve methods in this notebook\n",
-    "import astropy\n",
+    "import sys\n",
+    "sys.path.append('../../src/curvesimulator/')\n",
+    "from cs_flux_data import *\n",
     "from astropy.timeseries import BoxLeastSquares\n",
-    "from matplotlib import rcParams\n",
+    "\n",
     "path = '../../research/star_systems/TOI-4504/lightkurve/'  # path to lightcurve data\n"
    ],
    "id": "62b2c38295cdef15",
