--- a/evaluation/bls/bls_TOI4504_sec61-69.ipynb
+++ b/evaluation/bls/bls_TOI4504_sec61-69.ipynb
@@ -10,19 +10,19 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-06-25T17:05:57.570976Z",
-     "start_time": "2025-06-25T17:05:57.567627Z"
+     "end_time": "2025-07-02T16:36:06.633442Z",
+     "start_time": "2025-07-02T16:36:04.113450Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# we want to see plots right here in the notebook\n",
     "%matplotlib inline\n",
-    "from process_TESS_data.process_flux_data import *  # process_flux_data.py must be in the same directory as this notebook\n",
-    "# import lightkurve as lk   # uncomment if you want to use lightkurve methods in this notebook\n",
-    "import astropy\n",
+    "import sys\n",
+    "sys.path.append('../../src/curvesimulator/')\n",
+    "from cs_flux_data import *\n",
     "from astropy.timeseries import BoxLeastSquares\n",
-    "from matplotlib import rcParams\n",
+    "\n",
     "path = '../../research/star_systems/TOI-4504/lightkurve/'  # path to lightcurve data\n"
    ],
    "id": "62b2c38295cdef15",
