--- a/process_TESS_data/process_sector_005.ipynb
+++ b/process_TESS_data/process_sector_005.ipynb
@@ -18,7 +18,9 @@
    },
    "source": [
     "%matplotlib inline\n",
-    "from process_TESS_data.process_flux_data import *\n",
+    "import sys\n",
+    "sys.path.append('../src/curvesimulator/')\n",
+    "from cs_flux_data import *\n",
     "path = '../research/star_systems/TOI-4504/lightkurve/'"
    ],
    "outputs": [],
