--- a/process_TESS_data/process_sector_013.ipynb
+++ b/process_TESS_data/process_sector_013.ipynb
@@ -18,9 +18,9 @@
    },
    "source": [
     "%matplotlib inline\n",
-    "from process_TESS_data.process_flux_data import *\n",
-    "# import lightkurve as lk\n",
-    "# import pandas as pd\n",
+    "import sys\n",
+    "sys.path.append('../src/curvesimulator/')\n",
+    "from cs_flux_data import *\n",
     "path = '../research/star_systems/TOI-4504/lightkurve/'\n"
    ],
    "outputs": [],
