--- a/process_TESS_data/relevant_flux.ipynb
+++ b/process_TESS_data/relevant_flux.ipynb
@@ -22,8 +22,9 @@
    "source": [
     "# we want to see plots right here in the notebook\n",
     "%matplotlib inline\n",
-    "from process_TESS_data.process_flux_data import *  # process_flux_data.py must be in the same directory as this notebook\n",
-    "# import lightkurve as lk   # uncomment if you want to use lightkurve methods in this notebook\n",
+    "import sys\n",
+    "sys.path.append('../src/curvesimulator/')\n",
+    "from cs_flux_data import *\n",
     "path = '../research/star_systems/TOI-4504/lightkurve/'  # path to example lightcurve data. Change this if required.\n"
    ],
    "outputs": [],
