--- a/debug/rebound-test.ipynb
+++ b/debug/rebound-test.ipynb
@@ -71,9 +71,9 @@
     "e = 0.0\n",
     "i = 87.4 / 180 * math.pi\n",
     "P = 2.42614 * day\n",
-    "longitude_of_ascending_node = 0 / 180 * math.pi\n",
-    "argument_of_periapsis = 90 / 180 * math.pi\n",
-    "sim.add(hash=name, m=mass, r=radius, P=P, inc=i, e=e, Omega=longitude_of_ascending_node, omega=argument_of_periapsis)\n",
+    "Omega = 0 / 180 * math.pi\n",
+    "omega = 90 / 180 * math.pi\n",
+    "sim.add(hash=name, m=mass, r=radius, P=P, inc=i, e=e, Omega=Omega, omega=omega)\n",
     "\n",
     "name = \"TOI-4504c\"\n",
     "mass = 3.7672 * m_jup\n",
@@ -81,10 +81,10 @@
     "e = 0.0320\n",
     "i = 89.69 / 180 * math.pi\n",
     "P = 82.5438 * day  # valid for epoch BJD = 2458400\n",
-    "longitude_of_ascending_node = 0  / 180 * math.pi\n",
-    "argument_of_periapsis = 270.9 / 180 * math.pi\n",
+    "Omega = 0  / 180 * math.pi\n",
+    "omega = 270.9 / 180 * math.pi\n",
     "ma = 173.1 / 180 * math.pi\n",
-    "sim.add(hash=name, m=mass, r=radius, P=P, inc=i, e=e, Omega=longitude_of_ascending_node, omega=argument_of_periapsis, M=ma)\n",
+    "sim.add(hash=name, m=mass, r=radius, P=P, inc=i, e=e, Omega=Omega, omega=omega, M=ma)\n",
     "\n",
     "name = \"TOI-4504d\"\n",
     "mass = 1.4166 * m_jup\n",
@@ -92,10 +92,10 @@
     "e = 0.0445\n",
     "i = 84.74 / 180 * math.pi\n",
     "P = 40.5634 * day  # valid for epoch BJD = 2458400\n",
-    "longitude_of_ascending_node = 0 / 180 * math.pi  # Ω unknown\n",
-    "argument_of_periapsis = 93.5 / 180 * math.pi\n",
+    "Omega = 0 / 180 * math.pi  # Omega unknown\n",
+    "omega = 93.5 / 180 * math.pi\n",
     "ma = 280.6 / 180 * math.pi\n",
-    "sim.add(hash=name, m=mass, r=radius, P=P, inc=i, e=e, Omega=longitude_of_ascending_node, omega=argument_of_periapsis, M=ma)\n",
+    "sim.add(hash=name, m=mass, r=radius, P=P, inc=i, e=e, Omega=Omega, omega=omega, M=ma)\n",
     "\n",
     "\n",
     "sim.move_to_com()  # move origin to center of mass before integrating -> better numerical stability\n",
