--- a/process_TESS_data/process_flux_data_demo.ipynb
+++ b/process_TESS_data/process_flux_data_demo.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "source": [
     "# Demo\n",
-    "This notebook's only purpose is to demonstrate the use of the functions defined in process_flux_data.py"
+    "This notebook's only purpose is to demonstrate the use of the functions defined in cs_flux_data.py"
    ],
    "id": "ec624ddd743875ea"
   },
@@ -15,8 +15,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-02T16:24:20.830774Z",
-     "start_time": "2025-07-02T16:24:18.282666Z"
+     "end_time": "2025-08-12T08:33:14.512940Z",
+     "start_time": "2025-08-12T08:32:58.665894Z"
     }
    },
    "source": [
