--- a/process_TESS_data/get_flux_data_demo.ipynb
+++ b/process_TESS_data/get_flux_data_demo.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-12T08:36:28.937566Z",
-     "start_time": "2025-08-12T08:36:27.046160Z"
+     "end_time": "2025-08-23T08:35:09.389706Z",
+     "start_time": "2025-08-23T08:35:06.865878Z"
     }
    },
    "cell_type": "code",
@@ -22,420 +22,65 @@
    ],
    "id": "5d4e34dcc0daee59",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-12T09:52:02.094290Z",
-     "start_time": "2025-08-12T09:52:02.070794Z"
+     "end_time": "2025-08-23T08:39:44.682334Z",
+     "start_time": "2025-08-23T08:39:44.673328Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "search_result = lk.search_lightcurve('TIC349972412')\n",
+    "# search_result = lk.search_lightcurve('TIC349972412')\n",
     "# search_result\n",
     "\n",
     "# search_result = lk.search_lightcurve('TIC349972412', sector=89)\n",
-    "# search_result = lk.search_lightcurve('TIC349972412', author='QLP', cadence='long')\n",
+    "search_result = lk.search_lightcurve('TIC349972412', author='SPOC', exptime=120)\n",
     "# search_result = lk.search_lightcurve('TOI-4504', author='Tess', cadence='long')\n",
     "# lc_collection = search_result.download_all()\n",
     "# lc_collection.plot();\n",
     "\n",
     "search_result_df = search_result.table.to_pandas()\n",
-    "search_result_df"
+    "print(search_result_df[\"sequence_number\"])"
    ],
    "id": "7137e4719c5d80b9",
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "    intentType obs_collection    provenance_name instrument_name project  \\\n",
-       "0      science           TESS               SPOC      Photometer    TESS   \n",
-       "1      science           TESS               SPOC      Photometer    TESS   \n",
-       "2      science           TESS               SPOC      Photometer    TESS   \n",
-       "3      science           TESS               SPOC      Photometer    TESS   \n",
-       "4      science           TESS               SPOC      Photometer    TESS   \n",
-       "..         ...            ...                ...             ...     ...   \n",
-       "122    science           HLSP  GSFC-ELEANOR-LITE      Photometer    TESS   \n",
-       "123    science           HLSP  GSFC-ELEANOR-LITE      Photometer    TESS   \n",
-       "124    science           HLSP               TGLC      Photometer    TESS   \n",
-       "125    science           HLSP  GSFC-ELEANOR-LITE      Photometer    TESS   \n",
-       "126    science           HLSP               TGLC      Photometer    TESS   \n",
-       "\n",
-       "    filters wavelength_region target_name target_classification  \\\n",
-       "0      TESS           Optical   349972412                   NaN   \n",
-       "1      TESS           Optical   349972412                   NaN   \n",
-       "2      TESS           Optical   349972412                   NaN   \n",
-       "3      TESS           Optical   349972412                   NaN   \n",
-       "4      TESS           Optical   349972412                   NaN   \n",
-       "..      ...               ...         ...                   ...   \n",
-       "122    TESS           Optical   349972412                   NaN   \n",
-       "123    TESS           OPTICAL   349972412                   NaN   \n",
-       "124    TESS           OPTICAL   349972412                   NaN   \n",
-       "125    TESS           Optical   349972412                   NaN   \n",
-       "126    TESS           OPTICAL   349972412                   NaN   \n",
-       "\n",
-       "                                                obs_id  ...      size  \\\n",
-       "0    tess2020238165205-s0029-0000000349972412-0193-...  ...  11350080   \n",
-       "1    tess2020266004630-s0030-0000000349972412-0195-...  ...  11842560   \n",
-       "2    tess2020294194027-s0031-0000000349972412-0198-...  ...  11018880   \n",
-       "3    tess2020324010417-s0032-0000000349972412-0200-...  ...  11269440   \n",
-       "4    tess2020351194500-s0033-0000000349972412-0203-...  ...  11197440   \n",
-       "..                                                 ...  ...       ...   \n",
-       "122  hlsp_gsfc-eleanor-lite_tess_ffi_s0009-00000003...  ...    100800   \n",
-       "123  hlsp_gsfc-eleanor-lite_tess_ffi_s0010-00000003...  ...    103680   \n",
-       "124  hlsp_tglc_tess_ffi_gaiaid-5289275864525400704-...  ...     54720   \n",
-       "125  hlsp_gsfc-eleanor-lite_tess_ffi_s0007-00000003...  ...    103680   \n",
-       "126  hlsp_tglc_tess_ffi_gaiaid-5289275864525400704-...  ...     54720   \n",
-       "\n",
-       "     parent_obsid dataRights_products calib_level_products  filters_products  \\\n",
-       "0        27973845              PUBLIC                    3              TESS   \n",
-       "1        27987106              PUBLIC                    3              TESS   \n",
-       "2        28074436              PUBLIC                    3              TESS   \n",
-       "3        28145617              PUBLIC                    3              TESS   \n",
-       "4        28220952              PUBLIC                    3              TESS   \n",
-       "..            ...                 ...                  ...               ...   \n",
-       "122     181437607              PUBLIC                    4              TESS   \n",
-       "123     207001068              PUBLIC                    4              TESS   \n",
-       "124     294617273              PUBLIC                    4              TESS   \n",
-       "125     144233672              PUBLIC                    4              TESS   \n",
-       "126     277465163              PUBLIC                    4              TESS   \n",
-       "\n",
-       "                author         mission    #  year  sort_order  \n",
-       "0                 SPOC  TESS Sector 29    0  2020           1  \n",
-       "1                 SPOC  TESS Sector 30    1  2020           1  \n",
-       "2                 SPOC  TESS Sector 31    2  2020           1  \n",
-       "3                 SPOC  TESS Sector 32    3  2020           1  \n",
-       "4                 SPOC  TESS Sector 33    4  2020           1  \n",
-       "..                 ...             ...  ...   ...         ...  \n",
-       "122  GSFC-ELEANOR-LITE  TESS Sector 09  122  2019           9  \n",
-       "123  GSFC-ELEANOR-LITE  TESS Sector 10  123  2019           9  \n",
-       "124               TGLC  TESS Sector 11  124  2019           9  \n",
-       "125  GSFC-ELEANOR-LITE  TESS Sector 07  125  2019           9  \n",
-       "126               TGLC  TESS Sector 10  126  2019           9  \n",
-       "\n",
-       "[127 rows x 59 columns]"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>intentType</th>\n",
-       "      <th>obs_collection</th>\n",
-       "      <th>provenance_name</th>\n",
-       "      <th>instrument_name</th>\n",
-       "      <th>project</th>\n",
-       "      <th>filters</th>\n",
-       "      <th>wavelength_region</th>\n",
-       "      <th>target_name</th>\n",
-       "      <th>target_classification</th>\n",
-       "      <th>obs_id</th>\n",
-       "      <th>...</th>\n",
-       "      <th>size</th>\n",
-       "      <th>parent_obsid</th>\n",
-       "      <th>dataRights_products</th>\n",
-       "      <th>calib_level_products</th>\n",
-       "      <th>filters_products</th>\n",
-       "      <th>author</th>\n",
-       "      <th>mission</th>\n",
-       "      <th>#</th>\n",
-       "      <th>year</th>\n",
-       "      <th>sort_order</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>science</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>SPOC</td>\n",
-       "      <td>Photometer</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>Optical</td>\n",
-       "      <td>349972412</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>tess2020238165205-s0029-0000000349972412-0193-...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>11350080</td>\n",
-       "      <td>27973845</td>\n",
-       "      <td>PUBLIC</td>\n",
-       "      <td>3</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>SPOC</td>\n",
-       "      <td>TESS Sector 29</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>science</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>SPOC</td>\n",
-       "      <td>Photometer</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>Optical</td>\n",
-       "      <td>349972412</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>tess2020266004630-s0030-0000000349972412-0195-...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>11842560</td>\n",
-       "      <td>27987106</td>\n",
-       "      <td>PUBLIC</td>\n",
-       "      <td>3</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>SPOC</td>\n",
-       "      <td>TESS Sector 30</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>science</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>SPOC</td>\n",
-       "      <td>Photometer</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>Optical</td>\n",
-       "      <td>349972412</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>tess2020294194027-s0031-0000000349972412-0198-...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>11018880</td>\n",
-       "      <td>28074436</td>\n",
-       "      <td>PUBLIC</td>\n",
-       "      <td>3</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>SPOC</td>\n",
-       "      <td>TESS Sector 31</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>science</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>SPOC</td>\n",
-       "      <td>Photometer</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>Optical</td>\n",
-       "      <td>349972412</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>tess2020324010417-s0032-0000000349972412-0200-...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>11269440</td>\n",
-       "      <td>28145617</td>\n",
-       "      <td>PUBLIC</td>\n",
-       "      <td>3</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>SPOC</td>\n",
-       "      <td>TESS Sector 32</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>science</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>SPOC</td>\n",
-       "      <td>Photometer</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>Optical</td>\n",
-       "      <td>349972412</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>tess2020351194500-s0033-0000000349972412-0203-...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>11197440</td>\n",
-       "      <td>28220952</td>\n",
-       "      <td>PUBLIC</td>\n",
-       "      <td>3</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>SPOC</td>\n",
-       "      <td>TESS Sector 33</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>122</th>\n",
-       "      <td>science</td>\n",
-       "      <td>HLSP</td>\n",
-       "      <td>GSFC-ELEANOR-LITE</td>\n",
-       "      <td>Photometer</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>Optical</td>\n",
-       "      <td>349972412</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>hlsp_gsfc-eleanor-lite_tess_ffi_s0009-00000003...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>100800</td>\n",
-       "      <td>181437607</td>\n",
-       "      <td>PUBLIC</td>\n",
-       "      <td>4</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>GSFC-ELEANOR-LITE</td>\n",
-       "      <td>TESS Sector 09</td>\n",
-       "      <td>122</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>123</th>\n",
-       "      <td>science</td>\n",
-       "      <td>HLSP</td>\n",
-       "      <td>GSFC-ELEANOR-LITE</td>\n",
-       "      <td>Photometer</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>OPTICAL</td>\n",
-       "      <td>349972412</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>hlsp_gsfc-eleanor-lite_tess_ffi_s0010-00000003...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>103680</td>\n",
-       "      <td>207001068</td>\n",
-       "      <td>PUBLIC</td>\n",
-       "      <td>4</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>GSFC-ELEANOR-LITE</td>\n",
-       "      <td>TESS Sector 10</td>\n",
-       "      <td>123</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>124</th>\n",
-       "      <td>science</td>\n",
-       "      <td>HLSP</td>\n",
-       "      <td>TGLC</td>\n",
-       "      <td>Photometer</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>OPTICAL</td>\n",
-       "      <td>349972412</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>hlsp_tglc_tess_ffi_gaiaid-5289275864525400704-...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>54720</td>\n",
-       "      <td>294617273</td>\n",
-       "      <td>PUBLIC</td>\n",
-       "      <td>4</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>TGLC</td>\n",
-       "      <td>TESS Sector 11</td>\n",
-       "      <td>124</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>125</th>\n",
-       "      <td>science</td>\n",
-       "      <td>HLSP</td>\n",
-       "      <td>GSFC-ELEANOR-LITE</td>\n",
-       "      <td>Photometer</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>Optical</td>\n",
-       "      <td>349972412</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>hlsp_gsfc-eleanor-lite_tess_ffi_s0007-00000003...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>103680</td>\n",
-       "      <td>144233672</td>\n",
-       "      <td>PUBLIC</td>\n",
-       "      <td>4</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>GSFC-ELEANOR-LITE</td>\n",
-       "      <td>TESS Sector 07</td>\n",
-       "      <td>125</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>126</th>\n",
-       "      <td>science</td>\n",
-       "      <td>HLSP</td>\n",
-       "      <td>TGLC</td>\n",
-       "      <td>Photometer</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>OPTICAL</td>\n",
-       "      <td>349972412</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>hlsp_tglc_tess_ffi_gaiaid-5289275864525400704-...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>54720</td>\n",
-       "      <td>277465163</td>\n",
-       "      <td>PUBLIC</td>\n",
-       "      <td>4</td>\n",
-       "      <td>TESS</td>\n",
-       "      <td>TGLC</td>\n",
-       "      <td>TESS Sector 10</td>\n",
-       "      <td>126</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>127 rows × 59 columns</p>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0     27\n",
+      "1     28\n",
+      "2     29\n",
+      "3     30\n",
+      "4     31\n",
+      "5     32\n",
+      "6     33\n",
+      "7     34\n",
+      "8     35\n",
+      "9     36\n",
+      "10    37\n",
+      "11    38\n",
+      "12    69\n",
+      "13    68\n",
+      "14    67\n",
+      "15    65\n",
+      "16    61\n",
+      "17    63\n",
+      "18    62\n",
+      "19    64\n",
+      "20    87\n",
+      "21    90\n",
+      "22    88\n",
+      "23    89\n",
+      "24    94\n",
+      "Name: sequence_number, dtype: int64\n"
+     ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 4
   },
   {
    "metadata": {
